# PlexAutoSkip

./: .gitignore  Dockerfile  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
etc/services.d/plexautoskip/: run
resources/: chromecast.py  mediaWrapper.py  skipper.py
root/etc/cont-init.d/: 90-pas-config
setup/: requirements.txt
