[tool.poetry]
name = "plexautoskip"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PlexAPI = "^4.13.0"
requests = "^2.28.1"
websocket-client = "^1.4.1"
PyChromecast = "^12.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
